# rusty-vanilla

./: .env.example  .gitignore  Cargo.toml  Cross.toml
migrations/: 20241225094022_create_users_table.sql
src/: main.rs
src/modules/: database.rs  generate_lb.rs  mod.rs  osu_api.rs
