[package]
name = "rusty-vanilla"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
reqwest = "0.12.9"
serde = { version = "1.0", features = ["derive"] }
serenity = "0.12"
skia-safe = "0.80.1"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
panic = 'abort'
