[package]
name = "rusty-vanilla"
version = "0.1.1"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serenity = "0.12"
skia-safe = "0.80.1"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
openssl = { version = "0.10.29", features = ["vendored"] }
once_cell = "1.20.2"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
panic = 'abort'
